--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 									</li>
 									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LgeTb">LGE</a>
 									</li>
+									<li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
+									</li>
 
 									<!-- <li><a class=" get-modified" href="javascript:void(0)"  data-toggle="modal" data-target="#exampleModal" download value="Navigation Bar Get Notified">Get Notified!</a> </li> -->
 								</ul>
@@ -694,7 +696,7 @@
 					</div>
 				</section>
 
-				<div id="innovation-stack">
+				<div id="Team">
 					<div class="container">
 						<div class="row justify-content-center">
 
@@ -716,35 +718,36 @@
 								<img src="images/RoverWSB.png" alt="RoverWSB">
 								<div style="color:white;">Rover WSB<br>CeFi Synthetics</div>
 						</a>
-						<a href="https://twitter.com/DoggyLovesYou" target="_blank" value="TeamLover"
+						<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
 						title="Medium" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverLover.png" alt="RoverLover">
-								<div style="color:white;">Doggy Lover<br>Backend Master</div>
+								<img src="images/The_Roverine.png" alt="The_Rolverine">
+								<div style="color:white;">The Roverine<br>DeFi Power</div>
 						</a>
 						<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
 						title="Medium" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverApe.png" alt="RoverApe">
 								<div style="color:white;">Rover Ape<br>Guerilla Growth</div>
 						</a>
-						<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
+						<a href="https://twitter.com/RoverGrogu" target="_blank" value="TeamGrogu"
 						title="Medium" class="partner_image wow fadeInLeft">	
-								<img src="images/The_Roverine.png" alt="The_Rolverine">
-								<div style="color:white;">The Roverine<br>DeFi Power</div>
+								<img src="images/RoverGrogu.png" alt="RoverGrogu">
+								<div style="color:white;">Rover Grogu<br>Contracts Jedi</div>
+						</a>
+						<a href="https://twitter.com/Rover_Balls" target="_blank" value="TeamBalls"
+						title="Medium" class="partner_image wow fadeInLeft">	
+								<img src="images/RoverBaller.png" alt="RoverBaller">
+								<div style="color:white;">Rover Balls<br>Game Spirit</div>
+						<a href="https://twitter.com/DoggyLovesYou" target="_blank" value="TeamLover"
+						title="Medium" class="partner_image wow fadeInLeft">	
+								<img src="images/RoverLover.png" alt="RoverLover">
+								<div style="color:white;">Doggy Lover<br>Backend Master</div>
 						</a>
 						<a href="https://twitter.com/RoverPepeLisa" target="_blank" value="TeamLisa"
 						title="Medium" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverPepeLisa.png" alt="RoverPepeLisa">
 								<div style="color:white;">Pepe Lisa<br>Rover Art</div>
 						</a>
-						<a href="https://twitter.com/Rover_Balls" target="_blank" value="TeamBalls"
-						title="Medium" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverBaller.png" alt="RoverBaller">
-								<div style="color:white;">Rover Balls<br>Game Spirit</div>
-						<a href="https://twitter.com/RoverGrogu" target="_blank" value="TeamGrogu"
-						title="Medium" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverGrogu.png" alt="RoverGrogu">
-								<div style="color:white;">Rover Grogu<br>Contracts Jedi</div>
-						</a>
+
 					</div>
 				</div>
 
@@ -770,6 +773,7 @@
 									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
 									<li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li>
+									<li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li>
 								</ul>
 							</div>
 						</div>
