--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
 						<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
 						title="Medium" class="partner_image wow fadeInLeft">	
 								<img src="images/The_Roverine.png" alt="The_Rolverine">
-								<div style="color:white;">The Roverine<br>DeFi Power</div>
+								<div style="color:white;">The Roverine<br>DeFi Security</div>
 						</a>
 						<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
 						title="Medium" class="partner_image wow fadeInLeft">	
