clock to march 31

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 																		play: 'play',
 																		wrapper: 'flip-clock-small-wrapper'
 																	};
-																	var countdown = 1617037200 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
+																	var countdown = 1617210000 - ((new Date().getTime()) / 1000); // from: 03/22/2021 10:00 am -0700
 																	countdown = Math.max(1, countdown);
 																	$('.clock-builder-output').FlipClock(countdown, opts);
 																});
@@ -709,41 +709,41 @@
 				<div class="col-12">
 					<div class="stack_partners">
 						<a href="https://twitter.com/Rover_Hal" target="_blank" value="TeamHal"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="Rover_Hal" class="partner_image wow fadeInLeft">	
 								<img src="images/Rover_Hal.png" alt="Rover_Hal">
 								<div style="color:white;">Rover Hal<br>Unify DeFi</div>
 						</a>
 						<a href="https://twitter.com/RoverWSB" target="_blank" value="TeamRyuFire"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverWSB" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverWSB.png" alt="RoverWSB">
 								<div style="color:white;">Rover WSB<br>CeFi Synthetics</div>
 						</a>
 						<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="The_Rolverine" class="partner_image wow fadeInLeft">	
 								<img src="images/The_Roverine.png" alt="The_Rolverine">
 								<div style="color:white;">The Roverine<br>DeFi Security</div>
 						</a>
 						<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverApe" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverApe.png" alt="RoverApe">
 								<div style="color:white;">Rover Ape<br>Guerilla Growth</div>
 						</a>
 						<a href="https://twitter.com/RoverGrogu" target="_blank" value="TeamGrogu"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverGrogu" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverGrogu.png" alt="RoverGrogu">
 								<div style="color:white;">Rover Grogu<br>Contracts Jedi</div>
 						</a>
 						<a href="https://twitter.com/Rover_Balls" target="_blank" value="TeamBalls"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverBaller" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverBaller.png" alt="RoverBaller">
 								<div style="color:white;">Rover Balls<br>Game Spirit</div>
 						<a href="https://twitter.com/DoggyLovesYou" target="_blank" value="TeamLover"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverLover" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverLover.png" alt="RoverLover">
 								<div style="color:white;">Doggy Lover<br>Backend Master</div>
 						</a>
 						<a href="https://twitter.com/RoverPepeLisa" target="_blank" value="TeamLisa"
-						title="Medium" class="partner_image wow fadeInLeft">	
+						title="RoverPepeLisa" class="partner_image wow fadeInLeft">	
 								<img src="images/RoverPepeLisa.png" alt="RoverPepeLisa">
 								<div style="color:white;">Pepe Lisa<br>Rover Art</div>
 						</a>
@@ -788,7 +788,7 @@
 								<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="FooterDiscord"
 									title="Discord"><i class="fab fa-discord"></i></a>
 								</li>
-								<li><a href="https://medium.com/@rovercapital" target="_blank" value="FooterMedium"
+								<li><a href="https://rovercapital.medium.com/rover-all-defi-nft-earnings-49da69687861" target="_blank" value="FooterMedium"
 									title="Medium"><i class="fab fa-medium-m"></i></a>
 								</li>
 								<li><a href="https://www.instagram.com/rover.capital/" target="_blank"
