--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 									<li><a class="n-link-6" href="javascript:void(0)" value="OneTb">One</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NftTb">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
+									<li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
+									</li>
 									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)"
 											value="Token">Token</a></li>
 									<li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
 									</li>
 									<li><a class="n-link-11 special_nav Textfadehome" href="javascript:void(0)" value="LgeTb">LGE</a>
-									</li>
-									<li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li>
 
 									<!-- <li><a class=" get-modified" href="javascript:void(0)"  data-toggle="modal" data-target="#exampleModal" download value="Navigation Bar Get Notified">Get Notified!</a> </li> -->
@@ -615,6 +615,61 @@
 					
 				</section>
 
+				<div id="Team">
+					<div class="container">
+						<div class="row justify-content-center">
+							<div class="col-12">
+								<div class="wow fadeInLeft">
+									<h2 class="text-center text-white" style="padding-top:40px;">Rover Team</h2>
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="stack_partners">
+									<a href="https://twitter.com/Rover_Hal" target="_blank" value="TeamHal"
+									title="Rover_Hal" class="partner_image wow fadeInLeft">	
+											<img src="images/Rover_Hal.png" alt="Rover_Hal">
+											<div style="color:white;">Rover Hal<br>Unify DeFi</div>
+									</a>
+									<a href="https://twitter.com/RoverPepeLisa" target="_blank" value="TeamLisa"
+									title="RoverPepeLisa" class="partner_image wow fadeInLeft">	
+											<img src="images/RoverPepeLisa.png" alt="RoverPepeLisa">
+											<div style="color:white;">Pepe Lisa<br>Rover Art</div>
+									</a>
+									<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
+									title="The_Rolverine" class="partner_image wow fadeInLeft">	
+											<img src="images/The_Roverine.png" alt="The_Rolverine">
+											<div style="color:white;">The Roverine<br>Smart Spinoffs</div>
+									</a>
+									<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
+									title="RoverApe" class="partner_image wow fadeInLeft">	
+											<img src="images/RoverApe.png" alt="RoverApe">
+											<div style="color:white;">Rover Ape<br>Gorilla Analyst</div>
+									</a>
+									<a href="https://twitter.com/RoverGrogu" target="_blank" value="TeamGrogu"
+									title="RoverGrogu" class="partner_image wow fadeInLeft">	
+											<img src="images/RoverGrogu.png" alt="RoverGrogu">
+											<div style="color:white;">Rover Grogu<br>Contracts Jedi</div>
+									</a>
+									<a href="https://twitter.com/Rover_Balls" target="_blank" value="TeamBalls"
+									title="RoverBaller" class="partner_image wow fadeInLeft">	
+											<img src="images/RoverBaller.png" alt="RoverBaller">
+											<div style="color:white;">Rover Balls<br>Gamification</div>
+									<a href="https://twitter.com/DeFiHands" target="_blank" value="TeamDeFiHands"
+									title="DeFiHands" class="partner_image wow fadeInLeft">	
+											<img src="images/DeFiHands.png" alt="DeFiHands">
+											<div style="color:white;">DeFi Hands<br>CeFi to DeFi</div>
+									</a>		
+									<a href="https://twitter.com/DoggyLovesYou" target="_blank" value="TeamLover"
+									title="RoverLover" class="partner_image wow fadeInLeft">	
+											<img src="images/RoverLover.png" alt="RoverLover">
+											<div style="color:white;">Doggy Lover<br>Backend Master</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 
 				<section id="Token" class="content-banner-wrap content-banner-box-shadow animate">
 					<div class="container">
@@ -699,61 +754,6 @@
 					</div>
 				</section>
 
-				<div id="Team">
-					<div class="container">
-						<div class="row justify-content-center">
-
-				
-				<div class="col-12">
-					<div class="wow fadeInLeft">
-						<h2 class="text-center text-white" style="padding-top:40px;">Rover Team</h2>
-					</div>
-				</div>
-				<div class="col-12">
-					<div class="stack_partners">
-						<a href="https://twitter.com/Rover_Hal" target="_blank" value="TeamHal"
-						title="Rover_Hal" class="partner_image wow fadeInLeft">	
-								<img src="images/Rover_Hal.png" alt="Rover_Hal">
-								<div style="color:white;">Rover Hal<br>Unify DeFi</div>
-						</a>
-						<a href="https://twitter.com/RoverWSB" target="_blank" value="TeamRyuFire"
-						title="RoverWSB" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverWSB.png" alt="RoverWSB">
-								<div style="color:white;">Rover WSB<br>CeFi Synthetics</div>
-						</a>
-						<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
-						title="The_Rolverine" class="partner_image wow fadeInLeft">	
-								<img src="images/The_Roverine.png" alt="The_Rolverine">
-								<div style="color:white;">The Roverine<br>DeFi Security</div>
-						</a>
-						<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
-						title="RoverApe" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverApe.png" alt="RoverApe">
-								<div style="color:white;">Rover Ape<br>Guerilla Growth</div>
-						</a>
-						<a href="https://twitter.com/RoverGrogu" target="_blank" value="TeamGrogu"
-						title="RoverGrogu" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverGrogu.png" alt="RoverGrogu">
-								<div style="color:white;">Rover Grogu<br>Contracts Jedi</div>
-						</a>
-						<a href="https://twitter.com/Rover_Balls" target="_blank" value="TeamBalls"
-						title="RoverBaller" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverBaller.png" alt="RoverBaller">
-								<div style="color:white;">Rover Balls<br>Game Spirit</div>
-						<a href="https://twitter.com/DoggyLovesYou" target="_blank" value="TeamLover"
-						title="RoverLover" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverLover.png" alt="RoverLover">
-								<div style="color:white;">Doggy Lover<br>Backend Master</div>
-						</a>
-						<a href="https://twitter.com/RoverPepeLisa" target="_blank" value="TeamLisa"
-						title="RoverPepeLisa" class="partner_image wow fadeInLeft">	
-								<img src="images/RoverPepeLisa.png" alt="RoverPepeLisa">
-								<div style="color:white;">Pepe Lisa<br>Rover Art</div>
-						</a>
-
-					</div>
-				</div>
-
 				<div id="footer" class="content-banner-box-shadow">
 
 					<div class="container">
@@ -773,10 +773,10 @@
 									<li><a class="n-link-6" href="javascript:void(0)" value="One">One</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
+									<li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li>
 									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
 									<li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li>
-									<li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li>
 								</ul>
 							</div>
 						</div>
