--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 									<a href="https://twitter.com/The_Roverine" target="_blank" value="TeamRoverine"
 									title="The_Rolverine" class="partner_image wow fadeInLeft">	
 											<img src="images/The_Roverine.png" alt="The_Rolverine">
-											<div style="color:white;">The Roverine<br>Smart Spinoffs</div>
+											<div style="color:white;">The Roverine<br>Smart UI</div>
 									</a>
 									<a href="https://twitter.com/RoverApe" target="_blank" value="TeamApe"
 									title="RoverApe" class="partner_image wow fadeInLeft">	
