--- a/index.html
+++ b/index.html
@@ -601,11 +601,14 @@
 								<h1 class="wow fadeInUp"><span>RoverChains</span></h1>
 								<h2 class="wow fadeInUp">Cross Chains</h2>
 								<h3 class="wow fadeInUp">L2 DEX & Der Games, Social NFTs</h3>
-								<ul class="wow fadeInUp text-left">
-									<li>Cross Chains</li>
-									<li>L2 DEX & Der Games</li>
-									<li>Social NFTs </li>
-								</ul>
+								<div class="list_bg">
+									<ul class="wow fadeInUp text-left">
+										<li>Cross Chains</li>
+										<li>L2 DEX & Der Games</li>
+										<li>Social NFTs </li>
+									</ul>
+								</div>
+								
 								<p> Integrated with RoverNFT, RoverChains on L2 provides a superior experience for users with faster transaction times and lower fees, while bringing on-chain and off-chain game items into the DeFi marketplace. This in turn creates a market for DEXs, derivatives, and more, which drives even more capital into this already booming sector of decentralized finance. </p>
 							  </div>
 
