--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 									<li><a class="n-link-6" href="javascript:void(0)" value="OneTb">One</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NftTb">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
-									<li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
-									</li>
+									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
+									</li> -->
 									<li><a class=" Textfadehome n-link-9 special_nav" href="javascript:void(0)"
 											value="Token">Token</a></li>
 									<li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
@@ -615,7 +615,7 @@
 					
 				</section>
 
-				<div id="Team">
+				<!-- <div id="Team">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-12">
@@ -668,7 +668,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
 				<section id="Token" class="content-banner-wrap content-banner-box-shadow animate">
@@ -773,7 +773,7 @@
 									<li><a class="n-link-6" href="javascript:void(0)" value="One">One</a></li>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
-									<li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li>
+									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
 									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
 									<li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li>
