--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 																Notified!</a>
 													</div>
 													<div class="h5" style="color:white;">
-													Every holder earns every transaction:<br>
-													5% directly to their wallet<br>
-													5% added to rug-proof ownerless pool liquidity<br>
-													3x Hodl APY Multiplier + No Impermanent Loss													
+													Every transaction:<br>
+													5% goes to every holder wallet<br>
+													5% to rug-proof ownerless pool liquidity<br>
+													3x Hodl APY multiplier + No Impermanent Loss													
 													</div>
 												</div>
 											</div>
