--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 													<div class="h5" style="color:white;">
 													Every transaction:<br>
 													5% goes to every holder wallet<br>
-													5% to rug-proof ownerless pool liquidity<br>
+													5% to rug-proof ownerless pool<br>
 													3x Hodl APY multiplier + No Impermanent Loss													
 													</div>
 												</div>
