--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 													Every transaction:<br>
 													5% goes to every holder wallet<br>
 													5% to rug-proof ownerless pool<br>
-													3x Hodl APY multiplier + No Impermanent Loss													
+													3x Hodl APY multiplier<br>
+													No Impermanent Loss													
 													</div>
 												</div>
 											</div>
