--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 													Every transaction:<br>
 													5% goes to every holder wallet<br>
 													5% to rug-proof ownerless pool<br>
+													Stake without Impermanent Loss													
 													3x Hodl APY multiplier<br>
-													No Impermanent Loss													
 													</div>
 												</div>
 											</div>
