--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="StbReddit"
 										title="Reddit"><i class="fab fa-reddit"></i></a>
 									</li>
-									<li><a href="https://medium.com/@rovercapital" target="_blank" value="StbMedium"
+									<li><a href="https://rovercapital.medium.com/" target="_blank" value="StbMedium"
 										title="Medium"><i class="fab fa-medium-m"></i></a>
 									</li>
 									<li><a href="https://www.instagram.com/rover.capital/" target="_blank"
@@ -220,7 +220,7 @@
 													Every transaction:<br>
 													5% goes to every holder wallet<br>
 													5% to rug-proof ownerless pool<br>
-													Stake without Impermanent Loss													
+													Stake without Impermanent Loss<br>												
 													3x Hodl APY multiplier<br>
 													</div>
 												</div>
@@ -795,7 +795,7 @@
 								<li><a href="https://discord.gg/2vChyYXsHm" target="_blank" value="FooterDiscord"
 									title="Discord"><i class="fab fa-discord"></i></a>
 								</li>
-								<li><a href="https://rovercapital.medium.com/rover-all-defi-nft-earnings-49da69687861" target="_blank" value="FooterMedium"
+								<li><a href="https://rovercapital.medium.com/" target="_blank" value="FooterMedium"
 									title="Medium"><i class="fab fa-medium-m"></i></a>
 								</li>
 								<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="FooterMedium"
@@ -851,15 +851,22 @@
 						<ul class="modal-ul">
 							<br>
 							<li class="modal-p"><a href="https://twitter.com/rovercapital?s=21" target="_blank"
-									value="Follow us Twitter">Twitter</a></li>
+									value="Follow us Twitter">Twitter</a>
+							</li>
+							<br>
+							<li class="modal-p"><a href="https://discord.gg/6nBWStqk" target="_blank"
+								value="TgChat">Discord</a>
+							</li>
 							<br>
 							<li class="modal-p"><a href="https://t.me/rovercapital" target="_blank"
 									value="TgNews">Telegram
-									News</a> </li>
+									News</a> 
+							</li>
 							<br>
 							<li class="modal-p"><a href="https://t.me/roverchat" target="_blank"
 									value="TgChat">Telegram Chat</a>
 							</li>
+							<br>
 						</ul>
 
 					</div>
