--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 												<div class="banner-header-title">
 													<div class="banner-main-top">
 														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp"
-															data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1>
+															data-wow-duration="2s">DeFi & NFT<br>Metaverse</h1>
+															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
 														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space"
 															data-wow-duration="2s">
@@ -230,11 +231,13 @@
 																Notified!</a>
 													</div>
 													<div class="h5" style="color:white;">
+													RTR - Rover Tx Rewards token<br>
 													Every transaction:<br>
 													5% goes to every holder wallet<br>
-													5% to rug-proof ownerless pool<br>
-													Stake without Impermanent Loss<br>												
-													3x Hodl APY multiplier<br>
+													10% to rug-proof ownerless pool<br>
+													Revenue from DeFi & NFT suite<br>
+													Stake without impermanent loss<br>												
+													Auto-compounding hodl APY<br>
 													</div>
 												</div>
 											</div>
@@ -275,13 +278,9 @@
 							</div>
 							<div class="col-lg-4 col-md-5">
 								<div class="wow fadeInRight">
-									<p class="text-center text-white">Creating a platform that could handle all the many
-										aspects of DeFi under one umbrella required that we build an exchange, money
-										market, yield aggregator, and more. We called this ambitious project our
-										Innovation Stack. Rover combines every facet of DeFi & NFTs into a Unified and
-										All-Inclusive ecosystem built to maximize user profit flow with the least
-										friction. Built on the very best financial tools in crypto, Rover’s Innovation
-										Stack is the most ambitious form of “Money Lego” architecture yet in DeFi.</p>
+									<p class="text-center text-white">Rover is a DeFi & NFT metaverse complete with markets, funds & games platform with community created worlds & chains in a decentralized metaverse.
+Rover tokenomics offers reflection (token rewards per transaction) and staking with auto compounding hodl APY rewards and no impermanent loss.
+Rover combines the best of platform revenue & tokenomics.</p>
 
 								</div>
 
@@ -344,16 +343,14 @@
 
 							<div class="  dog-section-right">
 								<div class="dog-section-content">
-									<div class="section-subtitle wow fadeInUp">Fetch + Reflect + Compound</div>
+									<div class="section-subtitle wow fadeInUp">FetchSwap - Meta DEX</div>
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
 											data-target="#exampleModal" download value="RoverHouseGn">Get
 											Notified!</a>
 									</div>
 										<div class="section-title wow fadeInUp">One Click Easy</div>
-									<p class="wow fadeInUp">Send BNB. RoverFetch does the rest<br><br>Fetches you Rover
-										tokens from Pancake, and earns from reflection while staking and compounding
-										3x more APY for you </p>
+									<p class="wow fadeInUp">Send BNB & get RTR at minimal slippage, split from LGE & DEX</p>
 
 									<!-- <a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
 									</a> -->
@@ -387,20 +384,20 @@
 
 										<div class="dog-section-content">
 
-											<div class="section-title wow fadeInUp">Swap + Reflect</div>
-											<p class="wow fadeInUp">5% to every wallet from every tx</p>
+											<div class="section-title wow fadeInUp">Swap + Earn</div>
+											<p class="wow fadeInUp">5% of every transaction goes to to every holder</p>
 
 
 											<div class="section-title wow fadeInUp">Ownerless Pool Liquidity</div>
-											<p class="wow fadeInUp">5% of each tx adds to rug-proof pool</p>
+											<p class="wow fadeInUp">10% of every transaction adds to rug-proof pool</p>
 
 
 											<div class="section-title wow fadeInUp">Stake + No Impermanent Loss</div>
-											<p class="wow fadeInUp">Earn APY in a single sided rewards program</p>
+											<p class="wow fadeInUp">Single token staking for FetchSwap users</p>
 
 
-											<div class="section-title wow fadeInUp">Stake + Compound</div>
-											<p class="wow fadeInUp">3x more APY to hodl without any gas or hassle</p>
+											<div class="section-title wow fadeInUp">Hodl Rewards</div>
+											<p class="wow fadeInUp">Auto compound Hodl APY Rewards</p>
 
 
 
@@ -443,16 +440,19 @@
 									<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
 								</div>
 								<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
-									<h1 class="wow fadeInUp"><span>Rover Swap</span></h1>
-									<h3 class="wow fadeInUp">No Impermanent Loss</h3>
-									<p class="wow fadeInUp">Advancement extending Uniswap V3 concepts & insurance tokens</p>
+									<h1 class="wow fadeInUp"><span>RoverLand Metaverse</span></h1>
+									<h3 class="wow fadeInUp">DeFi suite</h3>
+									<p class="wow fadeInUp">Funds, DEX, stables, lending, money markets, yield aggregation</p>
+									<h3 class="wow fadeInUp">NFT suite</h3>
+									<p class="wow fadeInUp">Community created collections, markets, & games platform</p>
+									<!-- <h3 class="wow fadeInUp">No Impermanent Loss</h3>
+									<p class="wow fadeInUp">Insurance tokens</p>
 									<h3 class="wow fadeInUp">DEX aggregator</h3>
-									<p class="wow fadeInUp">Extend beyong 1inch and paraswap to use 1-direction pools</p>
-									<h3 class="wow fadeInUp">Single-Direction Pools</h3>
-									<p class="wow fadeInUp">Pools for e.g. large holders to remove project risk while earning steadily</p>
-									<h3 class="wow fadeInUp">Platform rev share</h3>
-									<p class="wow fadeInUp">Buy & stake x% of Rover to redirect x% of Rover’s platform
-										revenue</p>
+									<p class="wow fadeInUp">Extend beyong 1inch and paraswap to use 1-direction pools</p> -->
+									<!-- <h3 class="wow fadeInUp">Single-Direction Pools</h3>
+									<p class="wow fadeInUp">Pools for e.g. large holders to remove project risk while earning steadily</p> -->
+									<h3 class="wow fadeInUp">Partners program</h3>
+									<p class="wow fadeInUp">Contribute to or use the metaverse stack for revenue or a fee</p>
 
 									<div class="banner-header-button wow fadeInUp">
 										<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -501,8 +501,8 @@
 							</div>
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverGib</span></h1>
-								<h2 class="wow fadeInUp">Borrow/Lend</h2>
-								<h3 class="wow fadeInUp">Use Rover’s own Aave & Compound</h3>
+								<h2 class="wow fadeInUp">Borrow/Lend, Stables, Money Markets</h2>
+								<h3 class="wow fadeInUp">Combine fuse maker mirror synthetix & aave</h3>
 								<p>Rover’s Money Market protocol RoverGib expands the playing field to include borrowing
 									and lending on a myriad of DeFi assets. Like Aave, Maker, and Compound, RoverGib
 									creates markets for various assets. Lenders earn interest on otherwise idle crypto
@@ -525,12 +525,10 @@
 					<div class="container">
 						<div class="row  row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
-								<h2 class="wow fadeInUp">Governance</h2>
-								<h3 class="wow fadeInUp">Govern all the things</h3>
-								<p>ROVER is being created to uphold the principles of DeFi. Holders of the ROVER token
-									thus become part of the decentralized governing organization RoverDao, which makes
-									decisions on behalf of the protocol. </p>
+								<h1 class="wow fadeInUp"><span>RoverFunds</span></h1>
+								<h2 class="wow fadeInUp">DeFi & NFT Funds</h2>
+								<h3 class="wow fadeInUp">Influencer & algo decentralized investment funds</h3>
+								<p>Collaboration with Chainlink & CoTrader empowers Rover to offer DeFi Funds with NFT Funds coming shortly. Anyone can create a fund as a trader. Anyone can join it, as a cotrader, without sending their funds to the trader, and withdraw assets any time. For more info, check our partner cotrader.com</p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
@@ -556,17 +554,16 @@
 							</div>
 
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>RoverOne</span></h1>
-								<h2 class="wow fadeInUp">Mirror Maker</h2>
-								<h3 class="wow fadeInUp">Synthetix, Maker & Mirror, focused into one lens</h3>
-								<p>Whereas Money Markets are somewhat limited in the types of assets that can be
-									exchanged or borrowed against, RoverOne expands opportunities by taking in more
-									inputs and offering more outputs, such as synthetics, mirror derivatives, inverses
-									and commodities. </p>
+								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
+								<h2 class="wow fadeInUp">Governance</h2>
+								<h3 class="wow fadeInUp">Govern all the things</h3>
+								<p>ROVER is being created to uphold the principles of DeFi. Holders of the ROVER token
+									thus become part of the decentralized governing organization RoverDao, which makes
+									decisions on behalf of the protocol. </p>
 
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
-										data-target="#exampleModal" download value="RoverOneGn">Get
+										data-target="#exampleModal" download value="RoverDaoGn">Get
 										Notified!</a>
 								</div>
 
@@ -578,9 +575,9 @@
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>NFT</span></h1>
-								<h2 class="wow fadeInUp">Bridge DeFi to NFT</h2>
-								<h3 class="wow fadeInUp">Trade NFT across marketplaces with <br> Full DeFi benefits</h3>
+								<h1 class="wow fadeInUp"><span>NFT Metaverse</span></h1>
+								<h2 class="wow fadeInUp">Create trade explore & play</h2>
+								<h3 class="wow fadeInUp">Community created collections, funds & storefronts</h3>
 								<p>The current explosion of NFTs in the marketplace has created the first real gateway
 									between mainstream everyday people and the heretofore esoteric and somewhat
 									self-enclosed world of decentralized finance. With this comes unprecedented
@@ -693,12 +690,11 @@
 								<h1 class="wow fadeInUp"><span>Token</span></h1>
 								<h2 class="wow fadeInUp">Supply</h2>
 								<ul class="wow fadeInUp text-white  text-left">
-									<li>1Q - heavy burns</li>
+									<li>1Q - 50% burned</li>
 									<li>5% of each tx goes to every holder wallet</li>
-									<li>5% of each tx adds to rug-proof ownerless pool liquidity</li>
-									<li>No Team Wallets</li>
-									<li>Renounced Ownership</li>
-									<li>Revenue from all of DeFi + NFT</li>
+									<li>10% of each tx adds to rug-proof ownerless pool liquidity</li>
+									<li>No team wallets, renounced ownership</li>
+									<li>Revenue from a total DeFi & NFT stack</li>
 								</ul>
 								<h2 class="wow fadeInUp">Utility</h2>
 								<p>ROVER Token has the combined utility & revenue of all the DeFi & NFT platforms that
