--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp"
+														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 1;"
 															data-wow-duration="2s">DeFi & NFT<br>Metaverse</h1>
 															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
-														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space"
+														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 1;"
 															data-wow-duration="2s">
 															Uni<span class="Textfadehome fied">fied</span> in One
 															<span class="Textfadehome coinn">Coin</span>
 														</h2>
-														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp">
+														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
 
 													</div>
