front page, every tx on 1 line

--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
 																Notified!</a>
 													</div>
 													<div class="h5" style="color:white;">
-													RTR - Rover Tx Rewards token<br>
-													Every transaction:<br>
+													RTR - Rover Tx Rewards every tx:<br>
 													5% goes to every holder wallet<br>
 													10% to rug-proof ownerless pool<br>
 													Revenue from DeFi & NFT suite<br>
